// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractCode.vue Should display contract verification info if public explorer and verified 1`] = `
<div class="container container--fluid">
  <!---->
  <contract-verification-info-stub contract="[object Object]"></contract-verification-info-stub>
  <div class="mb-6 v-card v-sheet v-sheet--outlined theme--light">
    <div class="v-card__title">Bytecode</div>
    <div class="v-card__text">
      <div class="v-input v-textarea v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><textarea disabled="disabled" id="input-6" rows="5"></textarea></div>
            <div class="v-input__append-inner"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-content-copy theme--light" style="font-size: 16px;"></i></span></button></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div> <input type="hidden" id="copyBytecode" value="0x60">
    </div>
  </div>
  <div class="v-card v-sheet v-sheet--outlined theme--light">
    <div class="v-card__title">Assembly</div>
    <div class="v-card__text">
      <div class="hljs">abc</div>
    </div>
  </div>
</div>
`;

exports[`ContractCode.vue Should display the contract verification panel for public explorers 1`] = `
<div class="container container--fluid">
  <!---->
  <contract-verification-stub></contract-verification-stub>
  <div class="mb-6 v-card v-sheet v-sheet--outlined theme--light">
    <div class="v-card__title">Bytecode</div>
    <div class="v-card__text">
      <div class="v-input v-textarea v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><textarea disabled="disabled" id="input-18" rows="5"></textarea></div>
            <div class="v-input__append-inner"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-content-copy theme--light" style="font-size: 16px;"></i></span></button></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div> <input type="hidden" id="copyBytecode" value="0x60">
    </div>
  </div>
  <div class="v-card v-sheet v-sheet--outlined theme--light">
    <div class="v-card__title">Assembly</div>
    <div class="v-card__text">
      <div class="hljs">abc</div>
    </div>
  </div>
</div>
`;

exports[`ContractCode.vue Should not display the contract verification panel if not public explorer 1`] = `
<div class="container container--fluid">
  <!---->
  <!---->
  <div class="mb-6 v-card v-sheet v-sheet--outlined theme--light">
    <div class="v-card__title">Bytecode</div>
    <div class="v-card__text">
      No bytecode for this contract. Redeploy to upload it.
    </div>
  </div>
  <div class="v-card v-sheet v-sheet--outlined theme--light">
    <div class="v-card__title">Assembly</div>
    <div class="v-card__text"><span>No assembly for this contract. Redeploy to upload it.</span></div>
  </div>
</div>
`;
